# client-fixation-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
bot/: handlers.py  main.py  phone.py  storage.py
tests/: test_phone.py  test_smoke.py  test_storage.py
